@@ -24,5 +24,6 @@
 </td></tr></table>
 </div> <!-- end id="content"-->
 </div> <!-- end id="maincontainer"-->
+<div id="footer-content">&nbsp;</div>
 </body>
 </html>
